# laokezhu-translation

./: .gitignore  README.en.md  README.md  package-lock.json  package.json
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/i18n/: zh-CN.yml
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: mod.rs
src-tauri/src/common/: database_manager.rs  global_event_handler.rs  mod.rs  poll_event_handler.rs  tray_icon_manager.rs  tray_manager.rs  windows_manager.rs
src-tauri/src/dao/: engine_dao.rs  key_value_dao.rs  mod.rs
src-tauri/src/translate_v1/: aliyun_translator.rs  baidu_translator.rs  mod.rs  tencent_translator.rs  youdao_translator.rs
src-tauri/src/translators/: aliyun_translator.rs  baidu_translator.rs  mod.rs  tencent_translator.rs  youdao_translator.rs
src-tauri/tests/: env_tests.rs
src/components/: Common.ts  Config.ts  Translate.ts  router.ts
src/views/: AboutView.vue  ConfigView.vue  SwipeMenuView.vue  TranslateView.vue
