[package]
name = "laokezhu-translation"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[lib]
name = "laokezhu_translation_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-single-instance = "2.4.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
arboard = "3.6.1"
rdev = "0.5.3"
tauri-plugin-log = "2.8.0"
lazy_static = "1.5.0"
rusqlite = "0.39.0"
anyhow = "1.0.102"
